we add frontpage photo title, and style, including font family

--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         */
         font-display: swap;
       }
+
+      @font-face {
+        font-family: 'VimSM';
+        src: url('fonts/Vim/vimsm-webfont.eot');
+        src: url('fonts/Vim/vimsm-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Vim/vimsm-webfont.woff') format('woff'),
+         url('fonts/Vim/vimsm-webfont.ttf') format('truetype'),
+         url('fonts/Vim/vimsm-webfont.svg#vim_smheavy') format('svg');
+        font-weight: normal;
+        font-style: normal;
+      }
+      
       body {
         margin: 0;
         /* This is a font-stack that tries to use the system-default sans-serifs first */
