major changes: change colors view 1 and footer, changing icons. Create transfer-card element

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         min-height: 100vh;
         -webkit-font-smoothing: antialiased;
       }
+      p{
+        text-align: justify;
+          text-justify: inter-word;
+      }
     </style>
 
     
